--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,15 @@
 notifications:
   slack: zewo:VjyVCCQvTOw9yrbzQysZezD1
+os:
+  - linux
+  - osx
 language: generic
-matrix:
-  include:
-    - os: osx
-      env: JOB=SwiftPM_OSX
-      osx_image: xcode9
-    - os: linux
-      env: JOB=SwiftPM_linux
-      dist: trusty
-      sudo: required
-      install:
-        -  travis_retry eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/9f442512a46d7a2af7b850d65a7e9bd31edfb09b/swiftenv-install.sh)"
+sudo: required
+dist: trusty
+osx_image: xcode8
+install:
+  - eval "$(curl -sL https://raw.githubusercontent.com/Zewo/Zewo/master/Scripts/Travis/install.sh)"
 script:
-  - swift build -c release
-  - swift build
-  - swift test
-  - eval "$(curl -sL https://raw.githubusercontent.com/lgaches/swifttravisci/master/codecov)"
-
+  - bash <(curl -s https://raw.githubusercontent.com/Zewo/Zewo/master/Scripts/Travis/build-test.sh) GraphQL
+#after_success:
+  - bash <(curl -s https://raw.githubusercontent.com/Zewo/Zewo/master/Scripts/Travis/report-coverage.sh)
